# ourhour_backend

./: .gitignore  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/invitations/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/invitations/migrations/: 0001_initial.py  0002_initial.py  0003_guestbook_rsvp.py
apps/invitations/services/: guestbook_service.py  invitation_service.py  rsvp_service.py
apps/payments/: admin.py  models.py
apps/payments/migrations/: 0001_initial.py  0002_initial.py
apps/shared/models/: __init__.py  base.py  soft_delete.py
apps/shared/serializers/: __init__.py  base.py
apps/shared/utils/: helpers.py
apps/templates/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/templates/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/services/: user_service.py
common/: exceptions.py  filters.py  mixins.py  pagination.py  permissions.py  utils.py  validators.py
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  local.py  prod.py  staging.py  test.py
tests/: conftest.py
